Archive2/5b/e7eae80bb7b9af/output
main.cpp:7:17: warning: multi-character character constant [-Wmultichar]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                ^
main.cpp:7:17: warning: character constant too long for its type
main.cpp:7:26: warning: multi-character character constant [-Wmultichar]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                         ^
main.cpp:7:26: warning: character constant too long for its type
main.cpp:7:35: warning: multi-character character constant [-Wmultichar]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                  ^
main.cpp:7:35: warning: character constant too long for its type
main.cpp:7:45: warning: multi-character character constant [-Wmultichar]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                            ^
main.cpp:7:45: warning: character constant too long for its type
main.cpp:7:55: warning: multi-character character constant [-Wmultichar]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                                      ^
main.cpp:7:55: warning: character constant too long for its type
main.cpp:7:17: error: constant expression evaluates to 1919246692 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                ^~~~~~~
main.cpp:7:17: note: override this message by inserting an explicit cast
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                ^~~~~~~
                static_cast<char>( )
main.cpp:7:26: error: constant expression evaluates to 1635018098 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                         ^~~~~~~
main.cpp:7:26: note: override this message by inserting an explicit cast
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                         ^~~~~~~
                         static_cast<char>( )
main.cpp:7:35: error: constant expression evaluates to 1769173107 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                  ^~~~~~~~
main.cpp:7:35: note: override this message by inserting an explicit cast
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                  ^~~~~~~~
                                  static_cast<char>( )
main.cpp:7:45: error: constant expression evaluates to 1701147763 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                            ^~~~~~~~
main.cpp:7:45: note: override this message by inserting an explicit cast
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                            ^~~~~~~~
                                            static_cast<char>( )
main.cpp:7:55: error: constant expression evaluates to 1651271027 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                                      ^~~~~~~~~~~~
main.cpp:7:55: note: override this message by inserting an explicit cast
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
                                                      ^~~~~~~~~~~~
                                                      static_cast<char>( )
main.cpp:8:21: error: use of undeclared identifier 'strlen'
for (int i = 0; i < strlen(items); i++) {
                    ^
main.cpp:6:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char** argv) {
             ^
main.cpp:6:27: warning: unused parameter 'argv' [-Wunused-parameter]
int main(int argc, char** argv) {
                          ^
main.cpp:7:17: warning: implicit conversion from 'int' to 'char' changes value from 1919246692 to 100 [-Wconstant-conversion]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
               ~^~~~~~~
main.cpp:7:26: warning: implicit conversion from 'int' to 'char' changes value from 1635018098 to 114 [-Wconstant-conversion]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
               ~         ^~~~~~~
main.cpp:7:35: warning: implicit conversion from 'int' to 'char' changes value from 1769173107 to 115 [-Wconstant-conversion]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
               ~                  ^~~~~~~~
main.cpp:7:45: warning: implicit conversion from 'int' to 'char' changes value from 1701147763 to 115 [-Wconstant-conversion]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
               ~                            ^~~~~~~~
main.cpp:7:55: warning: implicit conversion from 'int' to 'char' changes value from 1651271027 to 115 [-Wconstant-conversion]
char items[] = {'bread', 'water', 'crisps', 'sweets', 'vegetables'};
               ~                                      ^~~~~~~~~~~~
17 warnings and 6 errors generated.
